Fix contrast issues

--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ img {
 }
 
 a {
-  color: #003462;
+  color: #1234ec;
   text-decoration: none;
 }
 
